Fix warnings on MapService